# Test project name, what is the directory name, and standard packages to use
project('learn-ccp-the-hard-way', 'cpp', default_options: ['cpp_std=c++20'])
# Which programs to execute
executable('ex02', 'ex02.cpp')
executable('ex05', 'ex05.cpp')
executable('ex06', 'ex06.cpp')
executable('ex07', 'ex07.cpp')